inserimento varie funzionalità del MU

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -223,7 +223,192 @@ Con il programma viene consegnato anche un file index.html per l'esecuzione su b
 Per avviare il programma \`e sufficente cliccare sul file.
 
 \subsezione{Descrizione funzionale}
-vari screenshot con relativa descrizione, da fare alla fine
+\subsezione{Il Menu}
+Il programma dispone di un menu a tendina nella parte alta dell'interfaccia grafica.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/menu.png}
+\caption{menu a tendina}
+\end{figure} 
+
+Nella sezione \textit{File} \`e possibile salvare il lavoro effettuato su proprio computer tramite file svg; oppure caricare un lavoro realizzato in precedenza. 
+L'utente dovr\`a rispettivamente scegliere un nome per il file da salvare o scegliere il file da caricare.
+Nella sezione \textit{Visualizza} l'utente pu\`o visualizzare i dialog delle propriet\`a nel caso fossero stati chiusi  tramite il tasto di chiusura in alto a destra (la classica X). \textit{Colori} si riferisce alla finestra che modifica i colori di una figura, \textit{propriet} invece gestisce le posizioni e dimensioni.
+Infine la sezione \textit{About} visualizza informazioni sul prodotto e sulla'azienda sviluppatrice.
+
+
+\subsezione{La Toolbar}
+Le funzioni di disegno del programma sono presenti nei bottoni della parte sinistra dell'interfaccia grafica. L'utente deve cliccare sul pulsante della funzione desiderata. Il putatore del mouse cambia a seconda della funzione di disegno scelta.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/selezione.png}
+\caption{Selezione}
+\end{figure} 
+
+Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura e tutti i suoi parametri sono visualizzati nelle finestre grafiche a destra. Se una figura  selezionata i suoi vertici sono evidenziati. In questo caso l'utente, tenendo premuto il puntatore mouse dentro alla figura pu\`o spostarla all'interno dell'area di disegno. Allo stesso modo, tenendo premuto sui vertici della figura, puo modificarne manualmente le dimensioni.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/ellisse.png}
+\caption{Disegno di un Ellisse}
+\end{figure} 
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione \textit{Ellisse}  cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click nella pozione in cui vuole disegnare la figura (vertice alto a sinistra della figura), poi col puntatore del mouse premuto decide la dimensione della figura. La stessa procedura vale per il disegno di un \textit{Quadrato-rettangolo}.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/poligono.png}
+\caption{Disegno di un Poligono regolare}
+\end{figure} 
+
+\vspace{300pt}
+Qui \`e stato disegnato un \textit{poligono regolare}  cliccando sull'apposito bottone (evidenziato in grigio). L'unica differenze rispetto a ellissi e quadrati-rettangoli sta nella finestra di propriet\`a a destra dell'interfaccia grafica). \`E possibile stabilire il numero di lati del poligono tramite l'etichettta N. di lati. Basta cliccare sul bottone cambia per memorizzare le modifche sul numero di lati.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/mano.png}
+\caption{Strumento Mano per spostare, trascinare le figure}
+\end{figure} 
+
+\vspace{300pt}
+Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click dentro alla figura e poi, tenendo premuto il puntatore, puo' spostare la figura dove desidera. Tale azione \`e realizzabile anche con il pulsante Selezione, descritto in precedenza. La medesima funzione pu\`o essere svolta a partire da una figura selezionata sul piano di disegno e spostata semplicemente con le frecce direzionali della propria tastiera.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/matita.png}
+\caption{Disegno a mano libera}
+\end{figure} 
+
+\vspace{300pt}
+Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e disegnare.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/linea.png}
+\caption{Disegno di una retta}
+\end{figure} 
+
+\vspace{300pt}
+Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e usare il cursore per disegnare e direzionare la linea retta. La fine della retta \`e determinata dal rilascio del mouse.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/label.png}
+\caption{Etichetta di testo}
+\end{figure} 
+
+\vspace{300pt}
+Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente cliccare sull'area di disegno per scegliere la posizione del testo e aiutarsi con la finestra di propriet\`a a destra per settare il testo dell'etichetta e il font.
+ 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{}
+\caption{Uso dello Zoom}
+\end{figure} 
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione \textit{Zoom} L'utente ha possibilit\`a di impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox e un click sulla percentuale desiderata. Un altro modo per effettuare le modifiche di zoom sul piano di disegno prevede l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
+ 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/ellisse.png}
+\caption{Cancellazione totale del piano di disegno}
+\end{figure} 
+
+\vspace{100pt}
+Facendo click sul bottone \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno: ATTENZIONE: si consiglia agli utenti di salvare prima di cancellare per evitare di perdere l'eventuale lavoro utile svolto fino a quel momento.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/canella_elemento_prima.png}
+\caption{Cancellazione di un elemento di disegno  - PRIMA}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/cancella_elemento_dopo.png}
+\caption{Cancellazione di un elemento di disegno  - DOPO}
+\end{figure}
+
+\vspace{100pt}
+Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura selezionata, 
+basta un click sul pulsante \textit{seleziona} di selezione immagine e successivamente fare click sull'immagine che si intende cancellare; a questo punto \`e possibile cancellare la figura selezionata con un click sul pulsante suddetto. La medesima funzione può essere svolta a partire da una figura selezionata premendo il tasto canc da tastiera.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/ellisse.png}
+\caption{Disegno di una curva di bezier}
+\end{figure} 
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione \textit{Curva di Bezier} consentendo all'utente di disegnare la curva in modo semplice e veloce.
+Click sull'apposito bottone (evidenziato in grigio)  e successivamente fare click sul piano di disegno dove si desidera disegnare la curva; il punto selezionato sar\`a il punto P0 di partenza della curva dopodich\`e click sul piano di disegno per descrivere i punti P1, P2 e P3 che determineranno rispettivamente: P1 e P2 i punti di direzione e traiettoria della curva mentre P3 rappresenta il punto di arrivo e termine della curva stessa.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/colore_bordo_prima.png}
+\caption{cambio colore del bordo  - PRIMA}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/colore_bordo_dopo.png}
+\caption{cambio colore del bordo  - DOPO}
+\end{figure} 
+
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione di cambiamento del colore del bordo della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Per iniziare \`e necesssario fare click sul pulsante \textit{Cambia Colore Bordo}: 
+\begin{elencopuntato}[\normindent]
+\item[-] Appare sul dialog la ruota dei colori.
+\item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
+\item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del contorno modificato con le tonalit\`a scelte. 
+\end{elencopuntato}
+Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: un click sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/colore_riempimento_prima.png}
+\caption{cambio colore del riempimento  - PRIMA}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/colore_riempimento_dopo.png}
+\caption{cambio colore del riempimento  - DOPO}
+\end{figure} 
+
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Per iniziare \`e necesssario fare click sul pulsante \textit{Cambia Colore Riemp.}: 
+\begin{elencopuntato}[\normindent]
+\item[-] Appare sul dialog la ruota dei colori.
+\item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
+\item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del riempimento modificato con le tonalit\`a scelte. 
+\end{elencopuntato}
+Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: un click il colore scelto per cambiare il colore di riempimento sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Riemp.} e un click su \textit{Cambia}.
+
+
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/cambio_#lati_prima.png}
+\caption{cambio numero lati di un poligono  - PRIMA}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/cambio_#lati_dopo.png}
+\caption{cambio numero lati di un poligono  - DOPO}
+\end{figure} 
+
+
+\vspace{100pt}
+\vspace{100pt}
+Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Impostando a piacere il numero di lati sul dialog si rende disponibile la possibilit\`a di selezionare il pulsante apposito \textit{Crea Poligoni} (evidenziato in grigio). A questo punto disponete il puntatore del mouse sulla zona del piano di disegno desiderata e, tenendo prmuto il tasto sinistro, disegnare un poligono con il numero di lati scelto.  
 
 \sezione{Appendice}
 
