correzione errori grossolani e aggiunte MU

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -367,7 +367,7 @@ Qui \`e stata selezionata la funzione di cambiamento del colore del bordo della 
 \item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
 \item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del contorno modificato con le tonalit\`a scelte. 
 \end{elencopuntato}
-Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: un click sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
+Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
 
 \begin{figure}[!ht]
 \centering
@@ -389,8 +389,7 @@ Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento d
 \item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
 \item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del riempimento modificato con le tonalit\`a scelte. 
 \end{elencopuntato}
-Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: un click il colore scelto per cambiare il colore di riempimento sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Riemp.} e un click su \textit{Cambia}.
-
+Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click per il colore scelto per cambiare il riempimento sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Riemp.} e un click su \textit{Cambia}.
 
 
 \begin{figure}[!ht]
@@ -405,8 +404,6 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 \caption{cambio numero lati di un poligono  - DOPO}
 \end{figure} 
 
-
-\vspace{100pt}
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Impostando a piacere il numero di lati sul dialog si rende disponibile la possibilit\`a di selezionare il pulsante apposito \textit{Crea Poligoni} (evidenziato in grigio). A questo punto disponete il puntatore del mouse sulla zona del piano di disegno desiderata e, tenendo prmuto il tasto sinistro, disegnare un poligono con il numero di lati scelto.  
 
