--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -305,25 +305,26 @@ Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull
  
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{}
-\caption{Uso dello Zoom}
+\includegraphics[scale=4]{images/zoom_piu.png}
+\caption{Uso dello Zoom per ingrandimento al 150 per cento}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=4]{images/zoom_meno.png}
+\caption{Uso dello Zoom per diminuzione dell' ingrandimento al 50 per cento}
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Zoom} L'utente ha possibilit\`a di impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox e un click sulla percentuale desiderata. Un altro modo per effettuare le modifiche di zoom sul piano di disegno prevede l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
+Qui \`e stata selezionata la funzione \textit{Zoom} L'utente ha possibilit\`a di impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto è possibile aumentare o diminuire lo zoom della percentuale desiderata. mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
  
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=4]{images/ellisse.png}
-\caption{Cancellazione totale del piano di disegno}
-\end{figure} 
 
 \vspace{100pt}
 Facendo click sul bottone \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno: ATTENZIONE: si consiglia agli utenti di salvare prima di cancellare per evitare di perdere l'eventuale lavoro utile svolto fino a quel momento.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/canella_elemento_prima.png}
+\includegraphics[scale=4]{images/cancella_elemento_prima.png}
 \caption{Cancellazione di un elemento di disegno  - PRIMA}
 \end{figure} 
 
@@ -339,7 +340,7 @@ basta un click sul pulsante \textit{seleziona} di selezione immagine e successiv
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/ellisse.png}
+\includegraphics[scale=4]{images/bezier.png}
 \caption{Disegno di una curva di bezier}
 \end{figure} 
 
@@ -368,6 +369,7 @@ Qui \`e stata selezionata la funzione di cambiamento del colore del bordo della 
 \item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del contorno modificato con le tonalit\`a scelte. 
 \end{elencopuntato}
 Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
+Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota dei colori e il bottone \textit{Cambia}.
 
 \begin{figure}[!ht]
 \centering
@@ -390,7 +392,7 @@ Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento d
 \item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del riempimento modificato con le tonalit\`a scelte. 
 \end{elencopuntato}
 Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click per il colore scelto per cambiare il riempimento sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Riemp.} e un click su \textit{Cambia}.
-
+Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota dei colori e il bottone \textit{Cambia}.
 
 \begin{figure}[!ht]
 \centering
