--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -212,17 +212,19 @@ N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, c
 \sezione{Istruzioni per l'uso}
 
 \subsezione{Installazione del programma}
-\subsubsezione{lato client}
-Il programma verr\`a fornito pacchettizzato con tutte le librerie necessarie al suo funzionamento. \`E sufficiente avviare lo script per avviare l'installazione del sistema sul proprio computer.
+\subsubsezione{Lato client}
+Il programma non necessita di installazione. 
 
-\subsubsezione{lato server}
-Rimandiamo ai seguenti link per l'installazione del server Tomcat e della JVM
+\subsubsezione{Lato server}
+L'installazione ed il funzionamento del server dipendono dalla presenza del web server Tomcat e di una JVM correttamente funzionanti. Rimandiamo ai seguenti link per l'installazione del server Tomcat e della JVM: [TODO: inserire link]
  
 \subsezione{Avvio del programma}
-Con il programma viene consegnato anche un file index.html per l'esecuzione su browser. 
-Per avviare il programma \`e sufficente cliccare sul file.
+\subsubsezione{Lato client}
+\`E sufficiente aprire la pagina web con un browser supportato. L'indirizzo dipende dall'host in cui viene installato il server.
+\subsubsezione{Lato server}
+[TODO: chiedere a Bosco]
 
-\subsezione{Descrizione funzionale}
+\subsezione{Descrizione funzionale - Lato client}
 \subsezione{Il Menu}
 Il programma dispone di un menu a tendina nella parte alta dell'interfaccia grafica.
 
@@ -232,14 +234,14 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 \caption{menu a tendina}
 \end{figure} 
 
-Nella sezione \textit{File} \`e possibile salvare il lavoro effettuato su proprio computer tramite file svg; oppure caricare un lavoro realizzato in precedenza. 
-L'utente dovr\`a rispettivamente scegliere un nome per il file da salvare o scegliere il file da caricare.
-Nella sezione \textit{Visualizza} l'utente pu\`o visualizzare i dialog delle propriet\`a nel caso fossero stati chiusi  tramite il tasto di chiusura in alto a destra (la classica X). \textit{Colori} si riferisce alla finestra che modifica i colori di una figura, \textit{propriet} invece gestisce le posizioni e dimensioni.
-Infine la sezione \textit{About} visualizza informazioni sul prodotto e sulla'azienda sviluppatrice.
-
+Nella sezione \textit{File} \`e possibile salvare il lavoro effettuato sul proprio computer in formato svg, oppure caricare un lavoro realizzato in precedenza.
+Per aprire un file si deve selezionare \textit{File > Carica} e inserire il percorso del file nel dialog che si aprir\`a oppure selezionarlo cliccando sul pulsante \textit{Sfoglia}. 
+Per salvare un file si deve selezionare \textit{File > Salva} e inserire un nome nel dialog che si aprir\`a in seguito e confermare la scelta. Comparir\`a un link che permette di scaricare il file.
+La sezione \textit{Visualizza} permette di visualizzare i dialog delle propriet\`a nel caso fossero stati chiusi tramite il tasto di chiusura in alto a destra (la classica X). \textit{Colori} si riferisce alla finestra che modifica i colori di una figura mentre \textit{Propriet\`a} gestisce la posizione e la dimensione di una figura.
+Infine la sezione \textit{About} permette di visualizzare informazioni sul prodotto e sull'azienda sviluppatrice.
 
 \subsezione{La Toolbar}
-Le funzioni di disegno del programma sono presenti nei bottoni della parte sinistra dell'interfaccia grafica. L'utente deve cliccare sul pulsante della funzione desiderata. Il putatore del mouse cambia a seconda della funzione di disegno scelta.
+Le funzioni di disegno del programma sono accessibili attraverso i bottoni presenti nel lato sinistro dell'interfaccia grafica. Cliccando su un pulsante si attiva la funzione desiderata. Il puntatore del mouse cambia a seconda della funzione di disegno scelta, nei browser che lo supportano.
 
 \begin{figure}[!ht]
 \centering
@@ -247,7 +249,7 @@ Le funzioni di disegno del programma sono presenti nei bottoni della parte sinis
 \caption{Selezione}
 \end{figure} 
 
-Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura e tutti i suoi parametri sono visualizzati nelle finestre grafiche a destra. Se una figura  selezionata i suoi vertici sono evidenziati. In questo caso l'utente, tenendo premuto il puntatore mouse dentro alla figura pu\`o spostarla all'interno dell'area di disegno. Allo stesso modo, tenendo premuto sui vertici della figura, puo modificarne manualmente le dimensioni.
+Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura. Selezionata una figura, tutti i suoi parametri sono visualizzati nelle finestre grafiche sulla destra. \`E possibile spostare i punti evidenziati cliccando su di essi e trascinare il mouse tenendo premuto il pulsante. Rilasciare il pulsante per fermare lo spostamento. Modificando questi punti \`e possibile modificare le dimensioni delle figure, e nel caso delle linee a mano libera e delle curve di bezier \`e possibile spostare i punti per cui passano le tangenti alle curve. Cliccando e tenendo premuto il pulsante sinistro del mouse dentro ad una figura \`e possibile spostarla all'interno dell'area di disegno.
 
 \begin{figure}[!ht]
 \centering
@@ -256,7 +258,7 @@ Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura e 
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Ellisse}  cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click nella pozione in cui vuole disegnare la figura (vertice alto a sinistra della figura), poi col puntatore del mouse premuto decide la dimensione della figura. La stessa procedura vale per il disegno di un \textit{Quadrato-rettangolo}.
+Qui \`e stata selezionata la funzione \textit{Ellisse}. Si deve fare click nella pozione in cui si vuole disegnare la figura (vertice alto a sinistra della figura), poi col puntatore del mouse premuto si modifica la dimensione della figura. Seguendo la stessa procedura \`e possibile disegnare rettangoli dopo aver selezionato il relativo strumento.
 
 \begin{figure}[!ht]
 \centering
@@ -265,7 +267,7 @@ Qui \`e stata selezionata la funzione \textit{Ellisse}  cliccando sull'apposito 
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stato disegnato un \textit{poligono regolare}  cliccando sull'apposito bottone (evidenziato in grigio). L'unica differenze rispetto a ellissi e quadrati-rettangoli sta nella finestra di propriet\`a a destra dell'interfaccia grafica). \`E possibile stabilire il numero di lati del poligono tramite l'etichettta N. di lati. Basta cliccare sul bottone cambia per memorizzare le modifche sul numero di lati.
+Qui \`e stato disegnato un \textit{poligono regolare}. L'unica differenze rispetto ad ellissi e rettangoli consiste nella finestra di propriet\`a a destra dell'interfaccia grafica, che permette di modificare il numero di lati del poligono inserendo il valore desiderato a fianco dell'etichettta \textit{N. di lati} e confermando tale scelta cliccando sul bottone \textit{Cambia}.
 
 \begin{figure}[!ht]
 \centering
@@ -274,7 +276,7 @@ Qui \`e stato disegnato un \textit{poligono regolare}  cliccando sull'apposito b
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click dentro alla figura e poi, tenendo premuto il puntatore, puo' spostare la figura dove desidera. Tale azione \`e realizzabile anche con il pulsante Selezione, descritto in precedenza. La medesima funzione pu\`o essere svolta a partire da una figura selezionata sul piano di disegno e spostata semplicemente con le frecce direzionali della propria tastiera.
+Qui \`e stata selezionata la funzione \textit{Mano}. Cliccando in un punto qualsiasi del canvas \`e possibile cambiare l'area di disegno correntemente visualizzata spostando il mouse mantenendo premuto il tasto sinistro.
 
 \begin{figure}[!ht]
 \centering
@@ -283,7 +285,7 @@ Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bott
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e disegnare.
+Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). \`E possibile tracciare una linea a mano libera tenendo premuto il pulsante sinistro del mouse e muovendo il mouse.
 
 \begin{figure}[!ht]
 \centering
@@ -292,7 +294,7 @@ Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando s
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e usare il cursore per disegnare e direzionare la linea retta. La fine della retta \`e determinata dal rilascio del mouse.
+Qui \`e stata selezionata la funzione \textit{Disegno di una retta}. Si deve tenere premuto il pulsante sinistro del mouse e spostare il cursore per disegnare la linea retta. La fine della retta \`e determinata dal rilascio del pulsante del mouse.
 
 \begin{figure}[!ht]
 \centering
@@ -301,7 +303,7 @@ Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando su
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente cliccare sull'area di disegno per scegliere la posizione del testo e aiutarsi con la finestra di propriet\`a a destra per settare il testo dell'etichetta e il font.
+Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve cliccare sull'area di disegno per scegliere la posizione del testo ed utilizzare la finestra di propriet\`a a destra per cambiare il testo dell'etichetta ed il font.
  
 \begin{figure}[!ht]
 \centering
@@ -316,11 +318,11 @@ Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Zoom} L'utente ha possibilit\`a di impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto è possibile aumentare o diminuire lo zoom della percentuale desiderata. mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
+Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto è possibile aumentare o diminuire lo zoom della percentuale desiderata mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
  
 
 \vspace{100pt}
-Facendo click sul bottone \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno: ATTENZIONE: si consiglia agli utenti di salvare prima di cancellare per evitare di perdere l'eventuale lavoro utile svolto fino a quel momento.
+Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno. Si consiglia di salvare prima di cancellare per evitare di perdere il lavoro svolto finora.
 
 \begin{figure}[!ht]
 \centering
@@ -335,8 +337,7 @@ Facendo click sul bottone \textit{Svuota} in basso a sinistra, l'utente pu\`o ca
 \end{figure}
 
 \vspace{100pt}
-Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura selezionata, 
-basta un click sul pulsante \textit{seleziona} di selezione immagine e successivamente fare click sull'immagine che si intende cancellare; a questo punto \`e possibile cancellare la figura selezionata con un click sul pulsante suddetto. La medesima funzione può essere svolta a partire da una figura selezionata premendo il tasto canc da tastiera.
+Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura correntemente selezionata cliccando sul pulsante suddetto. La medesima funzione pu\`o essere svolta da tastiera premendo il tasto \textit{Canc}.
 
 \begin{figure}[!ht]
 \centering
@@ -345,8 +346,7 @@ basta un click sul pulsante \textit{seleziona} di selezione immagine e successiv
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Curva di Bezier} consentendo all'utente di disegnare la curva in modo semplice e veloce.
-Click sull'apposito bottone (evidenziato in grigio)  e successivamente fare click sul piano di disegno dove si desidera disegnare la curva; il punto selezionato sar\`a il punto P0 di partenza della curva dopodich\`e click sul piano di disegno per descrivere i punti P1, P2 e P3 che determineranno rispettivamente: P1 e P2 i punti di direzione e traiettoria della curva mentre P3 rappresenta il punto di arrivo e termine della curva stessa.
+Qui \`e stata selezionata la funzione \textit{Curva di Bezier}. Per disegnare la curva, si deve fare click sul piano di disegno dove si desidera disegnare la curva. Il punto selezionato sar\`a il punto iniziale della curva, poi eseguire due click sul piano di disegno per descrivere i due punti controllo per cui passeranno le tangenti alla curva ed infine un ultimo click per selezionare il punto finale della curva.
 
 \begin{figure}[!ht]
 \centering
@@ -362,14 +362,14 @@ Click sull'apposito bottone (evidenziato in grigio)  e successivamente fare clic
 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione di cambiamento del colore del bordo della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Per iniziare \`e necesssario fare click sul pulsante \textit{Cambia Colore Bordo}: 
+Qui \`e stata selezionata la funzione di cambiamento del colore del bordo della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Per modificare il colore: 
 \begin{elencopuntato}[\normindent]
+\item[-] Cliccare sul pulsante \textit{Cambia Colore Bordo}.
 \item[-] Appare sul dialog la ruota dei colori.
 \item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
 \item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del contorno modificato con le tonalit\`a scelte. 
 \end{elencopuntato}
-Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
-Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota dei colori e il bottone \textit{Cambia}.
+Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Tavolozza} di colori posti sotto il piano di disegno: bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette} e cliccare sul colore scelto per cambiare il colore del bordo sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Bordo} e un click su \textit{Cambia}.
 
 \begin{figure}[!ht]
 \centering
@@ -385,14 +385,7 @@ Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota
 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Per iniziare \`e necesssario fare click sul pulsante \textit{Cambia Colore Riemp.}: 
-\begin{elencopuntato}[\normindent]
-\item[-] Appare sul dialog la ruota dei colori.
-\item[-] Selezionare un colore a piacere sulla ruota e impostare il grado di opacit\`a dal rettangolo iscritto all'interno della ruota. 
-\item[-]Quando il colore e l'opacit\`a sono stati scelti basta un click sul pulsante \textit{Cambia} per vedere il colore del riempimento modificato con le tonalit\`a scelte. 
-\end{elencopuntato}
-Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il colore scegliendolo dalla \textit{Palette} di colori posti sotto il piano di disegno: per prima cosa bisogna selezionare \textit{bordo} sulla combobox a destra della \textit{Palette}, un click per il colore scelto per cambiare il riempimento sul dialog. A questo punto basta un click sul pulsante \textit{Cambia Colore Riemp.} e un click su \textit{Cambia}.
-Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota dei colori e il bottone \textit{Cambia}.
+Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Il funzionamento \`e completamente analogo a quanto descritto per modificare il colore del bordo. Non tutte le figure hanno un colore di riempimento.
 
 \begin{figure}[!ht]
 \centering
@@ -407,8 +400,7 @@ Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Impostando a piacere il numero di lati sul dialog si rende disponibile la possibilit\`a di selezionare il pulsante apposito \textit{Crea Poligoni} (evidenziato in grigio). A questo punto disponete il puntatore del mouse sulla zona del piano di disegno desiderata e, tenendo prmuto il tasto sinistro, disegnare un poligono con il numero di lati scelto.  
-
+Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato.
 \sezione{Appendice}
 
 \subsezione{Messaggi di errore e loro significato}
