--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -230,7 +230,7 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/menu.png}
+\includegraphics[scale=0.5]{images/menu.png}
 \caption{menu a tendina}
 \end{figure} 
 
@@ -245,7 +245,7 @@ Le funzioni di disegno del programma sono accessibili attraverso i bottoni prese
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/selezione.png}
+\includegraphics[scale=1]{images/selezione.png}
 \caption{Selezione}
 \end{figure} 
 
@@ -253,7 +253,7 @@ Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura. S
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/ellisse.png}
+\includegraphics[scale=1]{images/ellisse.png}
 \caption{Disegno di un Ellisse}
 \end{figure} 
 
@@ -262,7 +262,7 @@ Qui \`e stata selezionata la funzione \textit{Ellisse}. Si deve fare click nella
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/poligono.png}
+\includegraphics[scale=1]{images/poligono.png}
 \caption{Disegno di un Poligono regolare}
 \end{figure} 
 
@@ -271,7 +271,7 @@ Qui \`e stato disegnato un \textit{poligono regolare}. L'unica differenze rispet
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/mano.png}
+\includegraphics[scale=1]{images/mano.png}
 \caption{Strumento Mano per spostare, trascinare le figure}
 \end{figure} 
 
@@ -280,7 +280,7 @@ Qui \`e stata selezionata la funzione \textit{Mano}. Cliccando in un punto quals
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/matita.png}
+\includegraphics[scale=1]{images/matita.png}
 \caption{Disegno a mano libera}
 \end{figure} 
 
@@ -289,7 +289,7 @@ Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando s
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/linea.png}
+\includegraphics[scale=1]{images/linea.png}
 \caption{Disegno di una retta}
 \end{figure} 
 
@@ -298,7 +298,7 @@ Qui \`e stata selezionata la funzione \textit{Disegno di una retta}. Si deve ten
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/label.png}
+\includegraphics[scale=1]{images/label.png}
 \caption{Etichetta di testo}
 \end{figure} 
 
@@ -307,13 +307,13 @@ Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve clicc
  
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/zoom_piu.png}
+\includegraphics[scale=1]{images/zoom_piu.png}
 \caption{Uso dello Zoom per ingrandimento al 150 per cento}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/zoom_meno.png}
+\includegraphics[scale=1]{images/zoom_meno.png}
 \caption{Uso dello Zoom per diminuzione dell' ingrandimento al 50 per cento}
 \end{figure} 
 
@@ -324,15 +324,15 @@ Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare man
 \vspace{100pt}
 Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno. Si consiglia di salvare prima di cancellare per evitare di perdere il lavoro svolto finora.
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=4]{images/cancella_elemento_prima.png}
-\caption{Cancellazione di un elemento di disegno  - PRIMA}
-\end{figure} 
+%\begin{figure}[!ht]
+%\centering
+%\includegraphics[scale=1]{images/cancella_elemento_prima.png}
+%\caption{Cancellazione di un elemento di disegno  - PRIMA}
+%\end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/cancella_elemento_dopo.png}
+\includegraphics[scale=1]{images/cancella_elemento_dopo.png}
 \caption{Cancellazione di un elemento di disegno  - DOPO}
 \end{figure}
 
@@ -373,13 +373,13 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_riempimento_prima.png}
+\includegraphics[scale=1]{images/colore_riempimento_prima.png}
 \caption{cambio colore del riempimento  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_riempimento_dopo.png}
+\includegraphics[scale=1]{images/colore_riempimento_dopo.png}
 \caption{cambio colore del riempimento  - DOPO}
 \end{figure} 
 
@@ -387,17 +387,17 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Il funzionamento \`e completamente analogo a quanto descritto per modificare il colore del bordo. Non tutte le figure hanno un colore di riempimento.
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=4]{images/cambio_#lati_prima.png}
-\caption{cambio numero lati di un poligono  - PRIMA}
-\end{figure} 
+%\begin{figure}[!ht]
+%\centering
+%\includegraphics[scale=0.5]{images/cambio_#lati_prima.png}
+%\caption{cambio numero lati di un poligono  - PRIMA}
+%\end{figure} 
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=4]{images/cambio_#lati_dopo.png}
-\caption{cambio numero lati di un poligono  - DOPO}
-\end{figure} 
+%\begin{figure}[!ht]
+%\centering
+%\includegraphics[scale=1]{images/cambio_#lati_dopo.png}
+%\caption{cambio numero lati di un poligono  - DOPO}
+%\end{figure} 
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato.
