--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -228,7 +228,7 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/menu.png}
+\includegraphics[scale=0.4]{images/menu.png}
 \caption{menu a tendina}
 \end{figure} 
 
@@ -243,7 +243,7 @@ Le funzioni di disegno del programma sono presenti nei bottoni della parte sinis
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/selezione.png}
+\includegraphics[scale=0.4]{images/selezione.png}
 \caption{Selezione}
 \end{figure} 
 
@@ -251,7 +251,7 @@ Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura e 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/ellisse.png}
+\includegraphics[scale=0.4]{images/ellisse.png}
 \caption{Disegno di un Ellisse}
 \end{figure} 
 
@@ -260,7 +260,7 @@ Qui \`e stata selezionata la funzione \textit{Ellisse}  cliccando sull'apposito 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/poligono.png}
+\includegraphics[scale=0.4]{images/poligono.png}
 \caption{Disegno di un Poligono regolare}
 \end{figure} 
 
@@ -269,49 +269,49 @@ Qui \`e stato disegnato un \textit{poligono regolare}  cliccando sull'apposito b
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/mano.png}
+\includegraphics[scale=0.4]{images/mano.png}
 \caption{Strumento Mano per spostare, trascinare le figure}
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click dentro alla figura e poi, tenendo premuto il puntatore, puo' spostare la figura dove desidera. Tale azione \`e realizzabile anche con il pulsante Selezione, descritto in precedenza. La medesima funzione pu\`o essere svolta a partire da una figura selezionata sul piano di disegno e spostata semplicemente con le frecce direzionali della propria tastiera.
+Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click dentro alla figura e poi, tenendo premuto il puntatore, puo' spostare la figura dove desidera. Tale azione \`e realizzabile anche con il pulsante Selezione, descritto in precedenza. La medesima funzione pu\`o essere svolta a partire da una figura selezionata sul piano di disegno e spostata semplicemente con le frecce direzionali della propria tastiera. \\
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/matita.png}
+\includegraphics[scale=0.4]{images/matita.png}
 \caption{Disegno a mano libera}
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e disegnare.
+Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e disegnare. \\
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/linea.png}
+\includegraphics[scale=0.4]{images/linea.png}
 \caption{Disegno di una retta}
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e usare il cursore per disegnare e direzionare la linea retta. La fine della retta \`e determinata dal rilascio del mouse.
+Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e usare il cursore per disegnare e direzionare la linea retta. La fine della retta \`e determinata dal rilascio del mouse. \\
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/label.png}
+\includegraphics[scale=0.4]{images/label.png}
 \caption{Etichetta di testo}
 \end{figure} 
 
 \vspace{300pt}
-Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente cliccare sull'area di disegno per scegliere la posizione del testo e aiutarsi con la finestra di propriet\`a a destra per settare il testo dell'etichetta e il font.
+Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente cliccare sull'area di disegno per scegliere la posizione del testo e aiutarsi con la finestra di propriet\`a a destra per settare il testo dell'etichetta e il font. \\
  
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/zoom_piu.png}
+\includegraphics[scale=0.4]{images/zoom_piu.png}
 \caption{Uso dello Zoom per ingrandimento al 150 per cento}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/zoom_meno.png}
+\includegraphics[scale=0.4]{images/zoom_meno.png}
 \caption{Uso dello Zoom per diminuzione dell' ingrandimento al 50 per cento}
 \end{figure} 
 
@@ -324,13 +324,13 @@ Facendo click sul bottone \textit{Svuota} in basso a sinistra, l'utente pu\`o ca
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/cancella_elemento_prima.png}
+\includegraphics[scale=0.4]{images/cancella_prima.png}
 \caption{Cancellazione di un elemento di disegno  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/cancella_elemento_dopo.png}
+\includegraphics[scale=0.4]{images/cancella_dopo.png}
 \caption{Cancellazione di un elemento di disegno  - DOPO}
 \end{figure}
 
@@ -340,7 +340,7 @@ basta un click sul pulsante \textit{seleziona} di selezione immagine e successiv
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/bezier.png}
+\includegraphics[scale=0.4]{images/bezier.png}
 \caption{Disegno di una curva di bezier}
 \end{figure} 
 
@@ -350,13 +350,13 @@ Click sull'apposito bottone (evidenziato in grigio)  e successivamente fare clic
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_bordo_prima.png}
+\includegraphics[scale=0.4]{images/colore_bordo_prima.png}
 \caption{cambio colore del bordo  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_bordo_dopo.png}
+\includegraphics[scale=0.4]{images/colore_bordo_dopo.png}
 \caption{cambio colore del bordo  - DOPO}
 \end{figure} 
 
@@ -373,13 +373,13 @@ Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_riempimento_prima.png}
+\includegraphics[scale=0.4]{images/colore_riempimento_prima.png}
 \caption{cambio colore del riempimento  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/colore_riempimento_dopo.png}
+\includegraphics[scale=0.4]{images/colore_riempimento_dopo.png}
 \caption{cambio colore del riempimento  - DOPO}
 \end{figure} 
 
@@ -396,18 +396,22 @@ Un ultimo click sul bottone \textit{Cambia Colore Bordo} per nascondere la ruota
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/cambio_#lati_prima.png}
+\includegraphics[scale=0.4]{images/cambio_#lati_prima.png}
 \caption{cambio numero lati di un poligono  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=4]{images/cambio_#lati_dopo.png}
+\includegraphics[scale=0.4]{images/cambio_#lati_dopo.png}
 \caption{cambio numero lati di un poligono  - DOPO}
 \end{figure} 
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Impostando a piacere il numero di lati sul dialog si rende disponibile la possibilit\`a di selezionare il pulsante apposito \textit{Crea Poligoni} (evidenziato in grigio). A questo punto disponete il puntatore del mouse sulla zona del piano di disegno desiderata e, tenendo prmuto il tasto sinistro, disegnare un poligono con il numero di lati scelto.  
+
+\subsezione{Altri Pulsanti}
+
+
 
 \sezione{Appendice}
 
