correzioni grafiche e generali MU

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -230,11 +230,7 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\includegraphics[scale=0.4]{images/menu.png}
-=======
 \includegraphics[scale=0.5]{images/menu.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
 \caption{menu a tendina}
 \end{figure} 
 
@@ -249,11 +245,7 @@ Le funzioni di disegno del programma sono accessibili attraverso i bottoni prese
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\includegraphics[scale=0.4]{images/selezione.png}
-=======
-\includegraphics[scale=1]{images/selezione.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/selezione.png}
 \caption{Selezione}
 \end{figure} 
 
@@ -261,11 +253,7 @@ Qui \`e stata usata la funzione \textit{seleziona} per selezionare una figura. S
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\includegraphics[scale=0.4]{images/ellisse.png}
-=======
-\includegraphics[scale=1]{images/ellisse.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/ellisse.png}
 \caption{Disegno di un Ellisse}
 \end{figure} 
 
@@ -274,11 +262,7 @@ Qui \`e stata selezionata la funzione \textit{Ellisse}. Si deve fare click nella
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\includegraphics[scale=0.4]{images/poligono.png}
-=======
-\includegraphics[scale=1]{images/poligono.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/poligono.png}
 \caption{Disegno di un Poligono regolare}
 \end{figure} 
 
@@ -287,120 +271,71 @@ Qui \`e stato disegnato un \textit{poligono regolare}. L'unica differenze rispet
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\includegraphics[scale=0.4]{images/mano.png}
-=======
-\includegraphics[scale=1]{images/mano.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/mano.png}
 \caption{Strumento Mano per spostare, trascinare le figure}
 \end{figure} 
+\newpage
 
 \vspace{300pt}
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-Qui \`e stata selezionata la funzione \textit{Mano} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve fare click dentro alla figura e poi, tenendo premuto il puntatore, puo' spostare la figura dove desidera. Tale azione \`e realizzabile anche con il pulsante Selezione, descritto in precedenza. La medesima funzione pu\`o essere svolta a partire da una figura selezionata sul piano di disegno e spostata semplicemente con le frecce direzionali della propria tastiera. \\
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/matita.png}
-=======
 Qui \`e stata selezionata la funzione \textit{Mano}. Cliccando in un punto qualsiasi del canvas \`e possibile cambiare l'area di disegno correntemente visualizzata spostando il mouse mantenendo premuto il tasto sinistro.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=1]{images/matita.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/matita.png}
 \caption{Disegno a mano libera}
 \end{figure} 
 
-\vspace{300pt}
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e disegnare. \\
+\newpage
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/linea.png}
-=======
+\vspace{300pt}
 Qui \`e stata selezionata la funzione \textit{Disegno a mano libera} cliccando sull'apposito bottone (evidenziato in grigio). \`E possibile tracciare una linea a mano libera tenendo premuto il pulsante sinistro del mouse e muovendo il mouse.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=1]{images/linea.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/linea.png}
 \caption{Disegno di una retta}
 \end{figure} 
 
 \vspace{300pt}
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-Qui \`e stata selezionata la funzione \textit{Disegno di una retta} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente tenere premuto il puntatore del mouse e usare il cursore per disegnare e direzionare la linea retta. La fine della retta \`e determinata dal rilascio del mouse. \\
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/label.png}
-=======
 Qui \`e stata selezionata la funzione \textit{Disegno di una retta}. Si deve tenere premuto il pulsante sinistro del mouse e spostare il cursore per disegnare la linea retta. La fine della retta \`e determinata dal rilascio del pulsante del mouse.
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=1]{images/label.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.5]{images/label.png}
 \caption{Etichetta di testo}
 \end{figure} 
 
 \vspace{300pt}
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-Qui \`e stata selezionata la funzione \textit{Etichetta di testo} cliccando sull'apposito bottone (evidenziato in grigio). L'utente deve semplicemente cliccare sull'area di disegno per scegliere la posizione del testo e aiutarsi con la finestra di propriet\`a a destra per settare il testo dell'etichetta e il font. \\
- 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/zoom_piu.png}
-=======
 Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve cliccare sull'area di disegno per scegliere la posizione del testo ed utilizzare la finestra di propriet\`a a destra per cambiare il testo dell'etichetta ed il font.
  
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=1]{images/zoom_piu.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.4]{images/zoom_piu.png}
 \caption{Uso dello Zoom per ingrandimento al 150 per cento}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
 \includegraphics[scale=0.4]{images/zoom_meno.png}
-=======
-\includegraphics[scale=1]{images/zoom_meno.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
 \caption{Uso dello Zoom per diminuzione dell' ingrandimento al 50 per cento}
 \end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto è possibile aumentare o diminuire lo zoom della percentuale desiderata mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
+Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto \`e possibile aumentare o diminuire lo zoom della percentuale desiderata mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
  
 
 \vspace{100pt}
 Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno. Si consiglia di salvare prima di cancellare per evitare di perdere il lavoro svolto finora.
 
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/cancella_prima.png}
-\caption{Cancellazione di un elemento di disegno  - PRIMA}
-\end{figure} 
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/cancella_dopo.png}
-=======
 %\begin{figure}[!ht]
 %\centering
-%\includegraphics[scale=1]{images/cancella_elemento_prima.png}
+%\includegraphics[scale=0.4]{images/cancella_elemento_prima.png}
 %\caption{Cancellazione di un elemento di disegno  - PRIMA}
 %\end{figure} 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=1]{images/cancella_elemento_dopo.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
+\includegraphics[scale=0.4]{images/cancella_elemento_dopo.png}
 \caption{Cancellazione di un elemento di disegno  - DOPO}
 \end{figure}
 
@@ -441,21 +376,13 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
 \includegraphics[scale=0.4]{images/colore_riempimento_prima.png}
-=======
-\includegraphics[scale=1]{images/colore_riempimento_prima.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
 \caption{cambio colore del riempimento  - PRIMA}
 \end{figure} 
 
 \begin{figure}[!ht]
 \centering
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
 \includegraphics[scale=0.4]{images/colore_riempimento_dopo.png}
-=======
-\includegraphics[scale=1]{images/colore_riempimento_dopo.png}
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
 \caption{cambio colore del riempimento  - DOPO}
 \end{figure} 
 
@@ -463,42 +390,20 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Il funzionamento \`e completamente analogo a quanto descritto per modificare il colore del bordo. Non tutte le figure hanno un colore di riempimento.
 
-<<<<<<< HEAD:doc/ManualeUtente/ManualeUtente.tex
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/cambio_#lati_prima.png}
-\caption{cambio numero lati di un poligono  - PRIMA}
-\end{figure} 
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/cambio_#lati_dopo.png}
-\caption{cambio numero lati di un poligono  - DOPO}
-\end{figure} 
-
-\vspace{100pt}
-Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Impostando a piacere il numero di lati sul dialog si rende disponibile la possibilit\`a di selezionare il pulsante apposito \textit{Crea Poligoni} (evidenziato in grigio). A questo punto disponete il puntatore del mouse sulla zona del piano di disegno desiderata e, tenendo prmuto il tasto sinistro, disegnare un poligono con il numero di lati scelto.  
-
-\subsezione{Altri Pulsanti}
-
-
-
-=======
 %\begin{figure}[!ht]
 %\centering
-%\includegraphics[scale=0.5]{images/cambio_#lati_prima.png}
+%\includegraphics[scale=0.4]{images/cambio_#lati_prima.png}
 %\caption{cambio numero lati di un poligono  - PRIMA}
 %\end{figure} 
 
 %\begin{figure}[!ht]
 %\centering
-%\includegraphics[scale=1]{images/cambio_#lati_dopo.png}
+%\includegraphics[scale=0.4]{images/cambio_#lati_dopo.png}
 %\caption{cambio numero lati di un poligono  - DOPO}
 %\end{figure} 
 
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato.
->>>>>>> 885f4b4bf8611880dfc237588e1e5e80e79ff8c4:doc/ManualeUtente/ManualeUtente.tex
 \sezione{Appendice}
 
 \subsezione{Messaggi di errore e loro significato}
