--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -205,7 +205,7 @@ N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, c
 \end{elencopuntato}
 \subsubsezione{lato server}
 \begin{elencopuntato}[\normindent]
-    \item[-] Requisiti software:  JVM 1.5 o superiore, Tomcat (Bosco..)
+    \item[-] Requisiti software:  JVM 1.5 o superiore, Apache Tomcat 6.0 o superiore.
     \item[-] Requisiti hardware:  Processore Intel 1GHz; 1GB memoria RAM
 \end{elencopuntato}
 
@@ -216,13 +216,72 @@ N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, c
 Il programma non necessita di installazione. 
 
 \subsubsezione{Lato server}
-L'installazione ed il funzionamento del server dipendono dalla presenza del web server Tomcat e di una JVM correttamente funzionanti. Rimandiamo ai seguenti link per l'installazione del server Tomcat e della JVM: [TODO: inserire link]
+Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: Apache Tomcat. Oltre a essere un Web Server, Tomcat \`e anche un
+Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio Java.
+Prima di tutto bisogna scaricare Tomcat dal link del sito ufficiale \textit{http://tomcat.apache.org/download-60.cgi}\\
+Nella sezione \textit{Binary Distribution} della pagina web, \`e possibile effettuare il download sia per sistemi Windows che per sistemi Linux.
+Terminato il download, fare doppio click sul file scaricato per iniziare l'installazione.\\
+La schermata \`e la seguente:
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/InstallTomcat1.png}
+\caption{Setup Wizard Apache Tomcat}
+\end{figure} 
+
+Premere \textit{Next} per andare avanti e accettare la licenza.
+Giunti alla schermata per la scelta della cartella di installazione, mantenere quella indicata di default.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/InstallTomcat2.png}
+\caption{Choose Install Location}
+\end{figure} 
+\newpage
+
+Premere \textit{Next}, e si presenter\`a la finestra di configurazione di Tomcat:
+Alla voce \textit{http/1.1 Connector Port} lasciare il valore di default (di solito 8080), quindi impostare una User Name e Password a scelta necessarie per accedere alla configurazione di Tomcat.\\
+premere \textit{Next}.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/InstallTomcat3.png}
+\caption{Configuration}
+\end{figure} 
+
+Nella schermata successiva, \`e necessario indicare il percorso dell'installazione della Java Virtual Machine (J2SE). Se gia installata, lasciare il percorso di default
+indicato.
+Per completare l'installazione, premere su \textit{Install}.
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/InstallTomcat4.png}
+\caption{Java Virtual Machine}
+\end{figure} 
+
+ 
+
  
 \subsezione{Avvio del programma}
 \subsubsezione{Lato client}
 \`E sufficiente aprire la pagina web con un browser supportato. L'indirizzo dipende dall'host in cui viene installato il server.
 \subsubsezione{Lato server}
-[TODO: chiedere a Bosco]
+Per l'avvio del server, andare su \textit{Start--Programmi--Apache Tomcat 6.0} e avviare \textit{Monitor Tomcat}.
+Nella barra delle applicazioni in esecuzione, apparir\`a l'icona che indica l'avvio di Tomcat.\\
+A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
+Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
+Andare nella sezione \textit{WAR file to deploy} della pagina.
+
+\newpage
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/DeployTomcat.png}
+\caption{Deploy}
+\end{figure} 
+
+Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
+A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione. 
+
 
 \subsezione{Descrizione funzionale - Lato client}
 \subsezione{Il Menu}
@@ -333,11 +392,11 @@ Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o c
 %\caption{Cancellazione di un elemento di disegno  - PRIMA}
 %\end{figure} 
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/cancella_elemento_dopo.png}
-\caption{Cancellazione di un elemento di disegno  - DOPO}
-\end{figure}
+%\begin{figure}[!ht]
+%\centering
+%\includegraphics[scale=0.4]{images/cancella_elemento_dopo.png}
+%\caption{Cancellazione di un elemento di disegno  - DOPO}
+%\end{figure}
 
 \vspace{100pt}
 Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura correntemente selezionata cliccando sul pulsante suddetto. La medesima funzione pu\`o essere svolta da tastiera premendo il tasto \textit{Canc}.
