--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -315,10 +315,28 @@ Misura l'aderenza alle norme di codifica, ed \`e il numero di errori riportati d
 
 \sezione{Resoconto delle attivit\`a di verifica}
  
- 
- 
 \subsezione{Dettaglio delle verifiche tramite analisi}
 \subsezione{Dettaglio delle verifiche tramite prove (test)}
+
+\subsubsezione{Fase RQ}
+Vengono ora riassunti i risultati raggiunti per la fase RQ, usando le metriche precedentemente descritte.
+\paragrafo{Copertura dei test}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] GUI: 21\%.
+\item[-] Application Logic: 85\% su un singolo browser.
+\item[-] Server: 0\%.
+\end{elencopuntato}
+Dai dati si evince che la copertura \`e buona per quanto riguarda la logica interna e nei limiti previsti per l'interfaccia. Per quanto riguarda il lato server non sono tuttora presenti test, ma il problema verr\`a risolto entro l'RA. Il server \`e comunque minimale, e rappresenta solo una piccola frazione del codice totale.
+
+\paragrafo{Numero di test superati}
+Vengono superati 151 test su 151 su tutti i browser supportati.
+
+\paragrafo{Numero di requisiti soddisfatti}
+Si faccia riferimento al tracciamento presente in \textit{DefinizioneDiProdotto.pdf}.
+
+\paragrafo{Numero di errori di stile}
+
+
 \subsezione{Dettaglio dell'esito delle revisioni}
  
  
