passato vari file sotto jslint

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -335,6 +335,13 @@ Vengono superati 151 test su 151 su tutti i browser supportati.
 Si faccia riferimento al tracciamento presente in \textit{DefinizioneDiProdotto.pdf}.
 
 \paragrafo{Numero di errori di stile}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] gui.js: un warning.
+\item[-] figures.js: nessun warning.
+\item[-] save.js: nessun warning.
+\item[-] load.js: nessun warning.
+\item[-] utils.js: nessun warning.
+\end{elencopuntato}
 
 
 \subsezione{Dettaglio dell'esito delle revisioni}
