PQ: finito resoconto

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -337,6 +337,7 @@ Si faccia riferimento al tracciamento presente in \textit{DefinizioneDiProdotto.
 \paragrafo{Numero di errori di stile}
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] gui.js: un warning.
+\item[-] canvas.js: nessun warning.
 \item[-] figures.js: nessun warning.
 \item[-] save.js: nessun warning.
 \item[-] load.js: nessun warning.
